src/test/deca/syntax/invalid/decaObjet/emptyClass/01missedBracket.deca
// Description:
//    tests de programme incorrect lexicalement (token 'clas' non reconnu)
//
// Resultats:
//    01missedBracket.deca:12:0:
//
// Historique:
//    cree le 13/06/2022

class A{

{

}